@startuml
' Clase principal
class Asteroid {
    + main()
}

' Clase Texto
class Texto {
    - sf::Text texto
    - const sf::Font& fuente
    --
    + Texto(const sf::Font&, const std::string&, unsigned int, sf::Color, float, float)
    + void setContenido(const std::string&)
    + void setColor(sf::Color)
    + void setPosition(float, float)
    + void dibujar(sf::RenderWindow&)
    + sf::FloatRect getBounds() const
    + const sf::Font& getFont() const
}

' Clase Música
class Musica {
    - sf::Music intro
    - sf::Music juego
    - sf::Music click
    - sf::Music gameOver
    --
    + bool cargarMusica(const std::string&, const std::string&, const std::string&, const std::string&)
    + void reproducirIntro()
    + void reproducirJuego()
    + void reproducirClick()
    + void reproducirGameOver()
    + void detenerIntro()
    + void detenerJuego()
    + void detenerGameOver()
}

' Clase Personaje
class Personaje {
    - sf::Sprite sprite
    - sf::Texture texture
    --
    + Personaje(const std::string&, float, float)
    + void mover(float, float)
    + void dibujar(sf::RenderWindow&)
    + void resetPosition(float, float)
    + void setScale(float, float)
    + sf::FloatRect getBounds() const
    + sf::Vector2f getPosition() const
}

' Clase Meteoro
class Meteoro {
    - sf::Sprite sprite
    - sf::Texture texture
    - float scaleX
    - float scaleY
    --
    + Meteoro(const std::string&, float, float, float, float)
    + void mover(float, float)
    + void resetPosition(float, float)
    + void dibujar(sf::RenderWindow&)
    + sf::FloatRect getBounds() const
    + sf::Vector2f getPosition() const
}

' Clase Fondo
class Fondo {
    - sf::Sprite sprite
    - sf::Texture texture
    --
    + Fondo(const std::string&, float, float)
    + void mover(float, float)
    + void dibujar(sf::RenderWindow&)
}

' Relaciones
Asteroid --> "1" Texto : usa
Asteroid --> "1" Musica : usa
Asteroid --> "1" Personaje : usa
Asteroid o-- "1..*" Meteoro : "agregación (varios meteoros)"
Asteroid *-- "1" Fondo : "composición (1 fondo principal)"

' Relaciones internas
Texto *-- "1" sf::Font : composición
Musica *-- "4" sf::Music : composición
Personaje *-- "1" sf::Sprite : composición
Meteoro *-- "1" sf::Texture : composición
Fondo *-- "1" sf::Texture : composición

@endum